--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <title>100% GlucoTrust Supplement</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <!-- seach consile verification --!>
+<meta name="google-site-verification" content="AUYRHYNdQWTh-Dg01APisLgMbRs0IjVdqS7lo2mK3wQ" />
     <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
     <link rel="stylesheet" href="fonts/icomoon/style.css">
 
