--- a/index.html
+++ b/index.html
@@ -117,13 +117,7 @@
           <div class="col-12 bg-black w-100 ft-feature-1-content">
             <div class="row align-items-center">
               <div class="col-lg-5">
-                <div class="h-100">
-                  <div class="mb-5 d-flex align-items-center">
-                    <div>
-                      <a href="https://35a9daycd6fqbr920nia-m3m25.hop.clickbank.net/?cbpage=dtc" class="popup-vimeo d-block play"><span class="icon-play"></span></a>
-                    </div>
-                    <h2>Tutorials</h2>
-                  </div>
+                <div class="h-100">                  
                   <img src="images/clickbank glucotrust.png" alt="Image" class="img-feature img-fluid">
                 </div>
               </div>
@@ -318,7 +312,7 @@ It's also known as a weight loss aid, because it helps to control your appetite 
   <script src="js/typed.js"></script>
             <script>
             var typed = new Typed('.typed-words', {
-            strings: ["100% Risk Free!","Money Back Guarantee. "," good for a full 180 days"],
+            strings: ["100% Risk Free!","Money Back Guarantee. "," good for your health", "Burn accomulated fat in no time."],
             typeSpeed: 80,
             backSpeed: 80,
             backDelay: 4000,
