--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>100% GlucoTrust Supplement</title>
+    <title>Pollution Free Electricity</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- seach consile verification --!>
@@ -65,7 +65,7 @@
           
           <div class="col-11 col-xl-2">
             
-            <h1 class="mb-0 site-logo"><span id="web">Gluco</span><span id="system">Trust</span><span id="network">Supplement</span></h1>
+            <h1 class="mb-0 site-logo"><span id="web">Clean</span><span id="system">Choice</span><span id="network">Energy</span></h1>
           </div>
           <div class="col-12 col-md-10 d-none d-xl-block">
             <nav class="site-navigation position-relative text-right" role="navigation">
