--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
           <div class="col-md-6">
             <ul class="social-media">
                            <!-- modal starts here -->
-              <a href="https://35a9daycd6fqbr920nia-m3m25.hop.clickbank.net/?cbpage=dtc"> <button type="button" class="btn btn-success" >for $68.99 </button></a>
-               <a href="https://35a9daycd6fqbr920nia-m3m25.hop.clickbank.net/?cbpage=dtc"> <button type="button" class="btn btn-primary" >View more</button></a>
+              <a href="https://afflat3c1.com/trk/lnk/090E564F-602C-4625-88A5-6D3E71FD54F4/?o=27455&c=918277&a=722682&k=A2FF9E6A914CDB4790E47531BBD5A46A&l=29581"> <button type="button" class="btn btn-success" >Get Started Now </button></a>
+               <a href="https://afflat3c1.com/trk/lnk/090E564F-602C-4625-88A5-6D3E71FD54F4/?o=27455&c=918277&a=722682&k=A2FF9E6A914CDB4790E47531BBD5A46A&l=29581"> <button type="button" class="btn btn-primary" >View more</button></a>
   
             </ul>
           </div>
@@ -71,16 +71,16 @@
             <nav class="site-navigation position-relative text-right" role="navigation">
 
               <ul class="site-menu js-clone-nav mr-auto d-none d-lg-block">
-                <li class="active"><a href="https://35a9daycd6fqbr920nia-m3m25.hop.clickbank.net/?cbpage=dtc">Home</a></li>
-                <li><a href="https://35a9daycd6fqbr920nia-m3m25.hop.clickbank.net/?cbpage=dtc">3 bottles at <strong>$59.00</strong></a></li>
-                <li><a href="https://35a9daycd6fqbr920nia-m3m25.hop.clickbank.net/?cbpage=dtc">6 bottles at <strong>$49.00</strong></a></li>
+                <li class="active"><a href="https://afflat3c1.com/trk/lnk/090E564F-602C-4625-88A5-6D3E71FD54F4/?o=27455&c=918277&a=722682&k=A2FF9E6A914CDB4790E47531BBD5A46A&l=29581">Home</a></li>
+                <li><a href="https://afflat3c1.com/trk/lnk/090E564F-602C-4625-88A5-6D3E71FD54F4/?o=27455&c=918277&a=722682&k=A2FF9E6A914CDB4790E47531BBD5A46A&l=29581">How it work</strong></a></li>
+                <li><a href="https://afflat3c1.com/trk/lnk/090E564F-602C-4625-88A5-6D3E71FD54F4/?o=27455&c=918277&a=722682&k=A2FF9E6A914CDB4790E47531BBD5A46A&l=29581">$75 Visa Prepaid Card.</strong></a></li>
                
               </ul>
             </nav>
           </div>
 
 
-          <div class="d-inline-block d-xl-none ml-md-0 mr-auto py-3" style="position: relative; top: 3px;"><a href="https://35a9daycd6fqbr920nia-m3m25.hop.clickbank.net/?cbpage=dtc" class="site-menu-toggle js-menu-toggle text-black"><span class="icon-menu h3"></span></a></div>
+          <div class="d-inline-block d-xl-none ml-md-0 mr-auto py-3" style="position: relative; top: 3px;"><a href="https://afflat3c1.com/trk/lnk/090E564F-602C-4625-88A5-6D3E71FD54F4/?o=27455&c=918277&a=722682&k=A2FF9E6A914CDB4790E47531BBD5A46A&l=29581" class="site-menu-toggle js-menu-toggle text-black"><span class="icon-menu h3"></span></a></div>
 
           </div>
 
@@ -91,7 +91,7 @@
 
   
 
-    <div class="site-blocks-cover overlay" style="background-image: url(images/doc1.png);" data-aos="fade" data-stellar-background-ratio="0.5">
+    <div class="site-blocks-cover overlay" style="background-image: url(images/fan.png);" data-aos="fade" data-stellar-background-ratio="0.5">
       <div class="container">
         <div class="row align-items-center justify-content-center text-center">
 
@@ -101,7 +101,7 @@
               <div class="col-md-8 text-center">
                 <h1>Unlock special offers <span class="typed-words"></span></h1>
                <b> <p class="lead mb-5">Start your journey to a greener world</p></b>
-                <div><a href="https://35a9daycd6fqbr920nia-m3m25.hop.clickbank.net/?cbpage=dtc" class="btn btn-primary btn-md">Get Started Now</a></div>
+                <div><a href="https://afflat3c1.com/trk/lnk/090E564F-602C-4625-88A5-6D3E71FD54F4/?o=27455&c=918277&a=722682&k=A2FF9E6A914CDB4790E47531BBD5A46A&l=29581" class="btn btn-primary btn-md">Get Started Now</a></div>
               </div>
             </div>
 
@@ -118,7 +118,7 @@
             <div class="row align-items-center">
               <div class="col-lg-5">
                 <div class="h-100">                  
-                  <img src="images/clickbank glucotrust.png" alt="Image" class="img-feature img-fluid">
+                  <img src="images/suplier.png" alt="Image" class="img-feature img-fluid">
                 </div>
               </div>
               <div class="col-lg-3 ml-auto">
@@ -126,35 +126,30 @@
                   <h3 class="d-flex align-items-center"><span class=" mr-2"></span><span>A cleaner future starts with you.</span></h3>
                   <p>With our dedicated customer care team, customer dashboard, and growing climate solution offerings, we'll be here for you every step of the way.
                   </p>
-                  <p><a href="https://35a9daycd6fqbr920nia-m3m25.hop.clickbank.net/?cbpage=dtc">Register Here</a></p>
+                  <p><a href="https://afflat3c1.com/trk/lnk/090E564F-602C-4625-88A5-6D3E71FD54F4/?o=27455&c=918277&a=722682&k=A2FF9E6A914CDB4790E47531BBD5A46A&l=29581">Register Here</a></p>
                 </div>
 
                 <div>
-                  <h3 class="d-flex align-items-center"><span class=" mr-2"></span><span>Chromium </span></h3>
-                  <p>GlucoTrust also contains Chromium. This ingredient supports your metabolism and helps it to work faster on burning fat.
+                  <h3 class="d-flex align-items-center"><span class=" mr-2"></span><span> </span></h3>
+                  <p>Our vision is a world free of catastrophic climate change with pure, clean air and abundant renewable energy. We're committed to creating a better environment for future generations, and we’re committed to caring for our customers, our people, and the planet.
                   </p>
-                  <p><a href="https://35a9daycd6fqbr920nia-m3m25.hop.clickbank.net/?cbpage=dtc">Order</a></p>
+                  <p><a href="https://afflat3c1.com/trk/lnk/090E564F-602C-4625-88A5-6D3E71FD54F4/?o=27455&c=918277&a=722682&k=A2FF9E6A914CDB4790E47531BBD5A46A&l=29581">View more</a></p>
                 </div>
 
               </div>
               <div class="col-lg-3">
                 <div class="mb-5">
-                  <h3 class="d-flex align-items-center"><span class="mr-2"></span><span>Manganese</span></h3>
-                  <p>Manganese stimulates insulin production, which turns your blood sugar into energy it can burn. Manganese also promotes healthy brain and nervous system function.
+                  <h3 class="d-flex align-items-center"><span class="mr-2"></span><span>You have the power to choose the cleaner option</span></h3>
+                  <p>Right now, the electricity that comes to your home likely includes dirty fossil fuels, which pollute our environment. But by choosing 100% wind and solar energy, you can help improve the air we breathe and the world we share.
                   </p>
-                  <p><a href="https://35a9daycd6fqbr920nia-m3m25.hop.clickbank.net/?cbpage=dtc">Order</a></p>
+                 
                 </div>
 
                 <div>
-                  <h3 class="d-flex align-items-center"><span class="icon icon-question_answer mr-2"></span><span>Licorice</span></h3>
-                  <p>
-
-Licorice root is one of the world's oldest herbal remedies, used for thousands of years in traditional Chinese, Middle Eastern and Greek medicines.
-
-It's also known as a weight loss aid, because it helps to control your appetite while being rich in flavonoids, which are said to prevent obesity.
-
+                  <h3 class="d-flex align-items-center"><span class="icon icon-question_answer mr-2"></span><span>Only minor changes</span></h3>
+                  <p>Your utility company stays the same. They will still maintain your lines and provide your bill. No service calls, equipment, or installation are needed—you'll simply see a line on your electric bill that says your “Supplier” is CleanChoice Energy.
                   </p>
-                  <p><a href="https://35a9daycd6fqbr920nia-m3m25.hop.clickbank.net/?cbpage=dtc">Order</a></p>
+                  <p><a href="https://afflat3c1.com/trk/lnk/090E564F-602C-4625-88A5-6D3E71FD54F4/?o=27455&c=918277&a=722682&k=A2FF9E6A914CDB4790E47531BBD5A46A&l=29581">More</a></p>
                 </div>
               </div>
             </div>
@@ -194,7 +189,7 @@ It's also known as a weight loss aid, because it helps to control your appetite 
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-md-8 text-center">
-            <h2 class="text-black h1 site-section-heading text-center">Packages</h2>
+            <h2 class="text-black h1 site-section-heading text-center">Frequently asked questions</h2>
           </div>
         </div>
 
@@ -217,7 +212,7 @@ Our mission is to switch as many American homes and businesses to clean, renewab
       </div>
     </section>
 
-    <a href="https://35a9daycd6fqbr920nia-m3m25.hop.clickbank.net/?cbpage=dtc" class="bg-primary py-5 d-block">
+    <a href="https://afflat3c1.com/trk/lnk/090E564F-602C-4625-88A5-6D3E71FD54F4/?o=27455&c=918277&a=722682&k=A2FF9E6A914CDB4790E47531BBD5A46A&l=29581" class="bg-primary py-5 d-block">
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-md10"><h2 class="text-white">Get yours now for your clean energy surprises</h2></div>
