--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             <div class="row align-items-center">
               <div class="col-lg-5">
                 <div class="h-100">                  
-                  <img src="images/suplier.png" alt="Image" class="img-feature img-fluid">
+                  <img src="images/supplier.png" alt="Image" class="img-feature img-fluid">
                 </div>
               </div>
               <div class="col-lg-3 ml-auto">
