--- a/index.html
+++ b/index.html
@@ -97,13 +97,13 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-10">
-            <h2 data-aos="fade-up" data-aos-delay="100">Welcome to Our Website</h2>
-            <p data-aos="fade-up" data-aos-delay="200">We are team of talented designers making websites with Bootstrap</p>
+            <h2 data-aos="fade-up" data-aos-delay="100">Looking for love, after break up Or some awakening?</h2>
+            <p data-aos="fade-up" data-aos-delay="200">Unlock the Secrets of the Universe: A Guide to Psychic Readings with Purple Garden"</p>
           </div>
           <div class="col-lg-5">
-            <form action="#" class="sign-up-form d-flex" data-aos="fade-up" data-aos-delay="300">
+            <form action="https://luckecity.github.io/" class="sign-up-form d-flex" data-aos="fade-up" data-aos-delay="300">
               <input type="text" class="form-control" placeholder="Enter email address">
-              <input type="submit" class="btn btn-primary" value="Sign up">
+              <input type="submit" class="btn btn-primary" value="Book NOW">
             </form>
           </div>
         </div>
@@ -155,10 +155,10 @@
         <div class="row align-items-xl-center gy-5">
 
           <div class="col-xl-5 content">
-            <h3>About Us</h3>
-            <h2>Ducimus rerum libero reprehenderit cumque</h2>
-            <p>Ipsa sint sit. Quis ducimus tempore dolores impedit et dolor cumque alias maxime. Enim reiciendis minus et rerum hic non. Dicta quas cum quia maiores iure. Quidem nulla qui assumenda incidunt voluptatem tempora deleniti soluta.</p>
-            <a href="#" class="read-more"><span>Read More</span><i class="bi bi-arrow-right"></i></a>
+            <h3>About Purple Garden Psychic Readings</h3>
+            <h2>Are you feeling stuck or uncertain about your life's path? Do you yearn for guidance and insight into what's ahead? </h2>
+            <p>You're not alone. Many of us have sought answers to life's biggest questions, and that's where psychic readings come in.</p>
+            <a href="#" class="read-more"><span>ake advantage of a special offer of $20 Free with a $10 deposit.</span><i class="bi bi-arrow-right"></i></a>
           </div>
 
           <div class="col-xl-7">
@@ -167,15 +167,23 @@
               <div class="col-md-6" data-aos="fade-up" data-aos-delay="200">
                 <div class="icon-box">
                   <i class="bi bi-buildings"></i>
-                  <h3>Eius provident</h3>
-                  <p>Magni repellendus vel ullam hic officia accusantium ipsa dolor omnis dolor voluptatem</p>
+                  <h3>believe</h3>
+                  <p>At Purple Garden, we believe that everyone has the power to tap into their inner wisdom and connect with the universe. Our talented team of psychics offers a range of reading options to help you gain clarity on your life's purpose, unlock hidden talents, and discover hidden relationships and soul connections.</p>
                 </div>
               </div> <!-- End Icon Box -->
 
               <div class="col-md-6" data-aos="fade-up" data-aos-delay="300">
                 <div class="icon-box">
                   <i class="bi bi-clipboard-pulse"></i>
-                  <h3>Rerum aperiam</h3>
+                  <h3>Benefits</h3>
+                  <ul>
+                    <li>Clarity on life's purpose and passions</li>
+                     <li>Hidden talents and abilities</li>
+                     <li>Relationship insights and guidance</li>
+                     <li>Challenges and opportunities ahead</li>
+                    <li>Personal growth and self-awareness</li>
+                  </ul>
+                  
                   <p>Autem saepe animi et aut aspernatur culpa facere. Rerum saepe rerum voluptates quia</p>
                 </div>
               </div> <!-- End Icon Box -->
