--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <p data-aos="fade-up" data-aos-delay="200">Unlock the Secrets of the Universe: A Guide to Psychic Readings with Purple Garden"</p>
           </div>
           <div class="col-lg-5">
-            <form action="https://luckecity.github.io/" class="sign-up-form d-flex" data-aos="fade-up" data-aos-delay="300">
+            <form action="https://mail.google.com/mail/u/0/#inbox" class="sign-up-form d-flex" data-aos="fade-up" data-aos-delay="300">
               
               <input type="submit" class="btn btn-primary" value="Book NOW">
             </form>
@@ -242,7 +242,6 @@
       <!--  Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Services</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
       </div><!-- End Section Title -->
 
       <div class="container">
