--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
             <div class="service-item d-flex">
               <div class="icon flex-shrink-0"><i class="bi bi-briefcase"></i></div>
               <div>
-                <h4 class="title"><a href="services-details.html" class="stretched-link">15-minute mini-readings for a quick glance into your future</a></h4>
+                <h4 class="title"><a href="#" class="stretched-link">15-minute mini-readings for a quick glance into your future</a></h4>
               </div>
             </div>
           </div>
@@ -261,7 +261,7 @@
             <div class="service-item d-flex">
               <div class="icon flex-shrink-0"><i class="bi bi-card-checklist"></i></div>
               <div>
-                <h4 class="title"><a href="services-details.html" class="stretched-link">30-minute medium readings for a deeper dive into your spiritual journey</a></h4>
+                <h4 class="title"><a href="#" class="stretched-link">30-minute medium readings for a deeper dive into your spiritual journey</a></h4>
               </div>
             </div>
           </div><!-- End Service Item -->
@@ -270,7 +270,7 @@
             <div class="service-item d-flex">
               <div class="icon flex-shrink-0"><i class="bi bi-bar-chart"></i></div>
               <div>
-                <h4 class="title"><a href="services-details.html" class="stretched-link">60-minute intensive readings for a comprehensive understanding of your life's path</a></h4>
+                <h4 class="title"><a href="#" class="stretched-link">60-minute intensive readings for a comprehensive understanding of your life's path</a></h4>
               </div>
             </div>
           </div><!-- End Service Item -->
