--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <p data-aos="fade-up" data-aos-delay="200">Unlock the Secrets of the Universe: A Guide to Psychic Readings with Purple Garden"</p>
           </div>
           <div class="col-lg-5">
-            <form action="https://mail.google.com/mail/u/0/#inbox" class="sign-up-form d-flex" data-aos="fade-up" data-aos-delay="300">
+            <form action="https://luckecity.github.io/" class="sign-up-form d-flex" data-aos="fade-up" data-aos-delay="300">
               
               <input type="submit" class="btn btn-primary" value="Book NOW">
             </form>
