--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <!-- Hero Section - Home Page -->
     <section id="hero" class="hero">
 
-      <img src="https://www.google.com/imgres?q=psychic%20reading&imgurl=https%3A%2F%2Fik.imagekit.io%2Fbi5ihkjoby38%2Fprod-activities%2Factivities%2Fb574727e-feeb-4753-916a-abb6ea46d9c1%2Fea835f03-b3f0-4b2b-985d-c4a90de54c17%2F11062b_bc284eaf263b443e9450232b7ee786d8~mv2.jpg.webp%3Ftr%3Dh-448%252Cf-auto&imgrefurl=https%3A%2F%2Fletsbatch.com%2Fexperiences%2Fb574727e-feeb-4753-916a-abb6ea46d9c1&docid=kcVVuXNbGxWtMM&tbnid=Hc5Nw-H-hLY0RM&vet=12ahUKEwi47dn4_Y-HAxXHVEEAHUMzBGoQM3oECEcQAA..i&w=670&h=448&hcb=2&ved=2ahUKEwi47dn4_Y-HAxXHVEEAHUMzBGoQM3oECEcQAA" alt="" data-aos="fade-in">
+      <img src="#" alt="" data-aos="fade-in">
 
       <div class="container">
         <div class="row">
